fix: scope last definition lookup to the right tenant